test/fail/typenotexists.app
// Type not defined

application test

section functions

globals {
  function do(a: A) {

  }
}